tdf#159680 fix memory leak of CTFontRef

The CTFontRef in CoreTextFontFace::GetVariations() was never
released and a new CTFontRef was allocated in every call to
CoreTextFontFace::GetVariations(). So release the CTFontRef
and only allocate it once when mxVariations is populated.

Change-Id: I08999956501d5860fff67e48001ef85a62ca8079
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169690
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 2e87c644245751aea9f50faf16c4ca4d57b0c2f1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169676
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>